<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Element" Id="{a953c541-b1ca-4360-b1cc-e0f87ba2906a}">
    <Declaration><![CDATA[{attribute 'enable_dynamic_creation' := ''}
TYPE T_Element :
STRUCT
	pPrevElement: POINTER TO T_Element;
	pData: POINTER TO BYTE;
	uliKey: ULINT;
	pNextElement: POINTER TO T_Element;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>