<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="T_Queue_SysDebugInfo" Id="{6e2e9da1-2bbb-44d2-98f2-6cc840a637fd}">
    <Declaration><![CDATA[(* Copyright 2017 Cimpress

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. *)

TYPE T_Queue_SysDebugInfo :
STRUCT
	uinGetHandleCalls : UINT;
	uinIniCalls:UINT;
	uinCheckAndAppendQSCalls:UINT;
	uinAllocNewQSCalls: UINT;
	uinAllocNewQICalls: UINT;
	uinAllocnewQCalls:UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>